# rt

./: .cproject  .project  CMakeLists.txt  Makefile  rt.1
CMakeModules/: FindGLEW.cmake
Debug/: Makefile  rt.pro
Release/: Makefile  Makefile.linux  Makefile.macos  makefile  rt.pro
expression-templates/: vector.hpp
models/: testblend.blend  testblend.blend1
rt.xcodeproj/: hape.mode1v3  hape.pbxuser  project.pbxproj
src/: Makefile  accelerator.hpp  camera.cpp  camera.hpp  color.cpp  constants.hpp  defaultaccelerator.cpp  defaultaccelerator.hpp  framebuffer.hpp  intersectable.hpp  main.cpp  point.cpp  qtmain.cpp  qtmain.hpp  ray.hpp  scene.cpp  scene.hpp  sdlframebuffer.cpp  sdlframebuffer.hpp  sdlmain.hpp  tests.cpp  triangle.cpp  triangle.hpp  utility.cpp  utility.hpp  vector.cpp
src/acceleration/: CMakeLists.txt  Makefile  accelerator.hpp  bvh.cpp  bvh.hpp  defaultaccelerator.cpp  defaultaccelerator.hpp  intersection.hpp  octree.cpp  octree.hpp
src/camera/: CMakeLists.txt  camera.cpp  camera.hpp
src/color/: CMakeLists.txt  color.cpp  color.hpp
src/datastructs/: arraylist.hpp  linkedlist.hpp
src/framebuffer/: CMakeLists.txt  framebuffer.hpp  qtoglframebuffer.cpp  qtoglframebuffer.hpp  renderthread.cpp  renderthread.hpp  sdlframebuffer.cpp  sdlframebuffer.hpp
src/geomerty/: intersectable.hpp  triangle.cpp  triangle.hpp
src/geometry/: CMakeLists.txt  Makefile  aabb.cpp  aabb.hpp  intersectable.hpp  meshtriangle.cpp  meshtriangle.hpp  plane.cpp  plane.hpp  primitive.hpp  shape.cpp  shape.hpp  sphere.cpp  sphere.hpp  triangle.cpp  triangle.hpp  trianglemesh.hpp
src/light/: CMakeLists.txt  arealight.cpp  arealight.hpp  light.cpp  light.hpp  pointlight.cpp  pointlight.hpp  spherelight.cpp  spherelight.hpp
src/materials/: CMakeLists.txt  aniso.cpp  asmicrofacet.cpp  asphong.cpp  beckmann.cpp  blinn.cpp  brdf.cpp  brdf.hpp  bsdf.cpp  bsdf.hpp  bxdf.cpp  frosted.cpp  lambertian.cpp  material.cpp  material.hpp  microfacet.cpp  phong.cpp  specular.cpp  substrate.cpp  texture.cpp  texture.hpp  ward.cpp
src/mathlib/: CMakeLists.txt  constants.hpp  matrix.cpp  matrix.hpp  point.cpp  point.hpp  quaternion.hpp  ray.hpp  sse.hpp  transformation.cpp  transformation.hpp  utility.hpp  vector.cpp  vector.hpp
src/qtgui/: CMakeLists.txt  qtmainwin.cpp  qtmainwin.hpp
src/samplers/: CMakeLists.txt  samplers.cpp  samplers.hpp
src/scene/: CMakeLists.txt  lex.yy.cc  location.hh  objparser.cpp  objparser.hpp  parser.cpp  parser.hpp  position.hh  scanner.hpp  scene.cpp  scene.hpp  sceneloader.hpp  sceneparser.l  sceneparser.tab.c  sceneparser.tab.h  sceneparser.y  stack.hh  test.scn  test2.scn
src/tracer/: CMakeLists.txt  Makefile  bidir.cpp  bidir.hpp  path.cpp  path.hpp  tracer.cpp  tracer.hpp  whitted.cpp
